--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@clerk/tanstack-start": "^0.4.26",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
     "@tanstack/react-router": "^1.81.5",
     "@tanstack/react-router-with-query": "^1.81.5",
     "@tanstack/router-devtools": "^1.81.5",
     "@tanstack/start": "^1.81.5",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "redaxios": "^0.5.1",
